oidc-auth/oauth2-proxy-signout-virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: oauth2-proxy-logout
  namespace: auth
spec:
  gateways:
  - panopticon/ingress-gateway
  hosts:
  - "*"
  http:
  - match:
    - uri:
        prefix: /logout
    rewrite:
      uri: /oauth2/sign_out
    route:
    - destination:
        host: oauth2-proxy.auth.svc.cluster.local
        port:
          number: 4180
